# stm32f103_base

./: .gitignore  CMakeLists.txt  Makefile  STM32F103C8Tx_FLASH.ld  STM32Toolchain.cmake  simply.py
Drivers/: stm32f1xx_hal_conf.h
Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_rtc.h
Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_rtc.c
freertos/: CMakeLists.txt
freertos/inc/: FreeRTOSConfig._h  FreeRTOSConfig.h
freertos/portable/: port.c
inc/: FreeRTOSConfig.h  board_config.h  control.h  ds18.h  ds18_config.h  fonts.h  i2c.h  main.h  onewire.h  ssd1306.h  step.h  step_board.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  teeny_usb_init.h  time_table.h  type_def.h  usb_device.h
lib/freertos/: FreeRTOSConfig.h
lib/stm32/: stm32f1xx.h
openocd/: README.md  stm32_f1.cfg
src/: control.c  ds18.c  fonts.c  freertos.c  i2c.c  main.c  onewire.c  ssd1306.c  step.c  step_board.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_TIM.c  stm32f1xx_it.c  system_stm32f1xx.c  teeny_usb_desc.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c
usb_stack/src/: stm32_otg_init.c
